--- a/frontend/admin-app/package.json
+++ b/frontend/admin-app/package.json
@@ -10,7 +10,10 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-checkbox": "^0.1.3",
+    "react-checkbox-tree": "^1.6.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
